Fix z-index of home screen background/menu background

--- a/assets/stylesheets/_menu.scss
+++ b/assets/stylesheets/_menu.scss
@@ -5,6 +5,7 @@
 	width: 100%;
 	height: 100vh;
 	background-color: #00D9F2;
+	z-index: 160;
 }
 
 #menu-close {
@@ -17,7 +18,7 @@
 	background-size: 3em;
 	background-position: center;
 	background-repeat: no-repeat;
-	z-index: 50;
+	z-index: 160;
 }
 
 #menu-menuItemContainer {
@@ -26,23 +27,23 @@
 	color: #FFF;
 	text-align: center;
 	padding: 8em 2em 0;
-	z-index: 50;
+	z-index: 160;
 }
 
 .menu-menuItem {
 	border-bottom: .1em #FFF solid;
 	margin-bottom: 1em;
 	padding-bottom: 1em;
-	
+
 	&:hover {
 		font-weight: 300;
 		font-style: italic;
 	}
-	
+
 	&:last-child {
 		border-bottom: none;
 	}
-	
+
 	span {
 		font-size: 2em;
 	}
@@ -50,10 +51,10 @@
 
 #menu-socialLinks {
 	position: relative;
-	z-index: 60;
+	z-index: 160;
 	width: 8em;
 	margin: 2em auto;
-	
+
 	a {
 		color: #FFF;
 		padding: 0.5em;
@@ -63,25 +64,25 @@
 @include size-medium($width-medium-1) {
 	#menu-view {
 		background-color: rgba(#00D9F2, 0.9);
-	}                                                                              
-	
+	}
+
 	.menu-menuItem {
 		width: 20em;
 		margin: 0 auto 1em;
 		border-bottom: none;
 		padding-bottom: 0;
-		
+
 		&:hover span {
 			border-bottom: 1px #FFF solid;
 		}
-		
+
 		span {
 			font-size: 2.25em;
 			display: inline-block;
 			padding-bottom: 0.33em;
 		}
 	}
-	
+
 	#menu-socialLinks {
 		display: none;
 	}
