--- a/assets/stylesheets/_profiles.scss
+++ b/assets/stylesheets/_profiles.scss
@@ -23,6 +23,7 @@
 	background-size: cover;
 	background-position: center;
 	cursor: pointer;
+	transition: background 0.3s;
 }
 
 .profiles-tile-selected,
