--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -90,13 +90,14 @@ img {
 	width: 100%;
 	height: 100%;
 	position: relative;
+	overflow-x: hidden;
 }
 
 #overlay {
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 2;
+	z-index: 160;
 }
 
 #content-current,
